select remove fieldName

--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -18,7 +18,7 @@
           type="text"
           autocomplete="off"
           [readonly]="!!fieldConfig.selectOnly"
-          [formControlName]="fieldName!"
+          [formControlName]="fieldConfig.fieldName"
           (isOverlayOpen)="overlayOpen($event)"
           (change)="onChange()"
           [iccAutocomplete]="autocomplete"
