--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -1,68 +1,66 @@
-<ng-container *ngIf="fieldConfig$()">
-  <ng-container *ngIf="fieldSetting$ | async as fieldSetting">
-    <icc-form-field
-      [formGroup]="form()"
-      *ngIf="selectOptions$ | async as selectOptions"
-      [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
-      [iccLabelWidth]="fieldConfig$().labelWidth"
-      [iccFieldWidth]="fieldConfig$().fieldWidth"
-      [iccFormFieldControl]="field"
-      [showFieldEditIndicator]="showFieldEditIndicator()"
+@if (fieldConfig$() && fieldSetting$ | async; as fieldSetting) {
+  <icc-form-field
+    [formGroup]="form()"
+    *ngIf="selectOptions$ | async as selectOptions"
+    [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
+    [iccLabelWidth]="fieldConfig$().labelWidth"
+    [iccFieldWidth]="fieldConfig$().fieldWidth"
+    [iccFormFieldControl]="field"
+    [showFieldEditIndicator]="showFieldEditIndicator()"
+  >
+    @if (fieldConfig$().fieldLabel !== undefined) {
+      <icc-label>{{ fieldConfig$().fieldLabel! | translate }}</icc-label>
+    }
+    <input
+      iccInput
+      #inputEl
+      type="text"
+      autocomplete="off"
+      [readonly]="!!fieldConfig$().selectOnly"
+      [formControlName]="fieldConfig$().fieldName"
+      (isOverlayOpen)="overlayOpen($event)"
+      (change)="onChange()"
+      [iccAutocomplete]="autocomplete"
+      [iccAutocompleteClose]="autocompleteClose"
+      [iccAutocompleteClickOption]="clickedOption"
+      [required]="required"
+      placeholder="{{ fieldConfig$().placeholder! | translate }}"
+    />
+    @if (fieldConfig$().clearValue && hasValue) {
+      <icc-icon icon="remove" iccSuffix (click)="clearSelected($event)"></icc-icon>
+    }
+    @if (!field.disabled) {
+      <icc-icon icon="angle-down" iccSuffix [ngStyle]="{ display: isOverlayOpen ? 'none' : '' }"></icc-icon>
+    }
+    @if (isOverlayOpen) {
+      <icc-icon icon="angle-up" iccSuffix (click)="closeOverlay()"></icc-icon>
+    }
+    <icc-autocomplete
+      #autocomplete="iccAutocomplete"
+      [multiSelection]="fieldConfig$().multiSelection"
+      [displayWith]="displayFn.bind(this)"
+      [compareWith]="compareFn.bind(this)"
     >
-      @if (fieldConfig$().fieldLabel !== undefined) {
-        <icc-label>{{ fieldConfig$().fieldLabel! | translate }}</icc-label>
-      }
-      <input
-        iccInput
-        #inputEl
-        type="text"
-        autocomplete="off"
-        [readonly]="!!fieldConfig$().selectOnly"
-        [formControlName]="fieldConfig$().fieldName"
-        (isOverlayOpen)="overlayOpen($event)"
-        (change)="onChange()"
-        [iccAutocomplete]="autocomplete"
-        [iccAutocompleteClose]="autocompleteClose"
-        [iccAutocompleteClickOption]="clickedOption"
-        [required]="required"
-        placeholder="{{ fieldConfig$().placeholder! | translate }}"
-      />
-      @if (fieldConfig$().clearValue && hasValue) {
-        <icc-icon icon="remove" iccSuffix (click)="clearSelected($event)"></icc-icon>
-      }
-      @if (!field.disabled) {
-        <icc-icon icon="angle-down" iccSuffix [ngStyle]="{ display: isOverlayOpen ? 'none' : '' }"></icc-icon>
-      }
-      @if (isOverlayOpen) {
-        <icc-icon icon="angle-up" iccSuffix (click)="closeOverlay()"></icc-icon>
-      }
-      <icc-autocomplete
-        #autocomplete="iccAutocomplete"
-        [multiSelection]="fieldConfig$().multiSelection"
-        [displayWith]="displayFn.bind(this)"
-        [compareWith]="compareFn.bind(this)"
-      >
-        <ng-template iccAutocompleteContent>
-          <icc-select-option
-            [fieldConfig]="fieldConfig$()"
-            [fieldSetting]="fieldSetting"
-            [autocomplete]="autocompleteComponent"
-            [setSelected]="setSelected"
-            [selectFilter]="field.value"
-            [form]="form()"
-            [selectOptions]="selectOptions"
-            (clickedOption)="onClickedOption($event)"
-            (autocompleteClose)="onAutocompleteClose($event)"
-            (valueChange)="onSelectOptionValueChange($event)"
-          >
-          </icc-select-option>
-        </ng-template>
-      </icc-autocomplete>
-      @if (field && (field.touched || field.dirty) && field.errors) {
-        <icc-form-field-errors>
-          <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
-        </icc-form-field-errors>
-      }
-    </icc-form-field>
-  </ng-container>
-</ng-container>
+      <ng-template iccAutocompleteContent>
+        <icc-select-option
+          [fieldConfig]="fieldConfig$()"
+          [fieldSetting]="fieldSetting"
+          [autocomplete]="autocompleteComponent"
+          [setSelected]="setSelected"
+          [selectFilter]="field.value"
+          [form]="form()"
+          [selectOptions]="selectOptions"
+          (clickedOption)="onClickedOption($event)"
+          (autocompleteClose)="onAutocompleteClose($event)"
+          (valueChange)="onSelectOptionValueChange($event)"
+        >
+        </icc-select-option>
+      </ng-template>
+    </icc-autocomplete>
+    @if (field && (field.touched || field.dirty) && field.errors) {
+      <icc-form-field-errors>
+        <icc-field-errors [errors]="field!.errors!"></icc-field-errors>
+      </icc-form-field-errors>
+    }
+  </icc-form-field>
+}
