select option signal

--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -1,7 +1,6 @@
-@if (fieldConfig$() && fieldSetting$ | async; as fieldSetting) {
+@if (fieldConfig$() && selectOptions$() && fieldSetting$ | async; as fieldSetting) {
   <icc-form-field
     [formGroup]="form()"
-    *ngIf="selectOptions$()"
     [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
     [iccLabelWidth]="fieldConfig$().labelWidth"
     [iccFieldWidth]="fieldConfig$().fieldWidth"
