select option signal

--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -1,7 +1,7 @@
 @if (fieldConfig$() && fieldSetting$() && selectOptions$()) {
   <icc-form-field
     [formGroup]="getForm()"
-    [ngStyle]="{ display: hidden ? 'none' : 'inherit' }"
+    [style.display]="hidden ? 'none' : 'inherit'"
     [iccLabelWidth]="fieldConfig$().labelWidth"
     [iccFieldWidth]="fieldConfig$().fieldWidth"
     [iccFormFieldControl]="field"
@@ -29,7 +29,7 @@
       <icc-icon icon="remove" iccSuffix (click)="clearSelected($event)"></icc-icon>
     }
     @if (!field.disabled) {
-      <icc-icon icon="angle-down" iccSuffix [ngStyle]="{ display: isOverlayOpen ? 'none' : '' }"></icc-icon>
+      <icc-icon icon="angle-down" iccSuffix [style.display]="isOverlayOpen ? 'none' : ''"></icc-icon>
     }
     @if (isOverlayOpen) {
       <icc-icon icon="angle-up" iccSuffix (click)="closeOverlay()"></icc-icon>
