--- a/projects/icc/menu/src/menus.component.html
+++ b/projects/icc/menu/src/menus.component.html
@@ -1,51 +1,57 @@
 <!-- Use form due to the use checkbox in the menu item -->
-<form *ngIf="form" [formGroup]="form">
-  <div class="icc-menu-row" *ngFor="let item of items">
-    @if (isLeafMenu(item)) {
-      <icc-menu-item
-        [disabled]="getDisabled(item)"
-        [form]="form"
-        [menuItem]="item"
-        (iccMenuItemClick)="menuItemClick($event)"
-      >
-      </icc-menu-item>
-    } @else if (hasChildItem(item) && level() === 0) {
-      <span
-        [iccPopover]="menu"
-        [iccPopoverTrigger]="menuTrigger()"
-        [popoverLevel]="level()"
-        [clickToClose]="clickToClose()"
-        [iccPopoverPosition]="bottom"
-      >
-        <icc-icon *ngIf="item.icon" [config]="item.icon"></icc-icon>
-        <span class="icc-menu-item-title"> {{ item.title }}</span>
-      </span>
-    } @else if (hasChildItem(item) && level() > 0) {
-      <icc-menu-item
-        [disabled]="getDisabled(item)"
-        [form]="form"
-        [menuItem]="item"
-        [iccPopover]="menu"
-        [iccPopoverTrigger]="hoverTrigger"
-        [popoverLevel]="level()"
-        [clickToClose]="clickToClose()"
-        [iccPopoverPosition]="rightBottom"
-        (iccMenuItemClick)="menuItemClick($event)"
-      >
-      </icc-menu-item>
+@if (form) {
+  <form [formGroup]="form">
+    @for (item of items; track $index; let index = $index) {
+      <div class="icc-menu-row">
+        @if (isLeafMenu(item)) {
+          <icc-menu-item
+            [disabled]="getDisabled(item)"
+            [form]="form"
+            [menuItem]="item"
+            (iccMenuItemClick)="menuItemClick($event)"
+          >
+          </icc-menu-item>
+        } @else if (hasChildItem(item) && level() === 0) {
+          <span
+            [iccPopover]="menu"
+            [iccPopoverTrigger]="menuTrigger()"
+            [popoverLevel]="level()"
+            [clickToClose]="clickToClose()"
+            [iccPopoverPosition]="bottom"
+          >
+            @if (item.icon) {
+              <icc-icon [config]="item.icon"></icc-icon>
+            }
+            <span class="icc-menu-item-title"> {{ item.title }}</span>
+          </span>
+        } @else if (hasChildItem(item) && level() > 0) {
+          <icc-menu-item
+            [disabled]="getDisabled(item)"
+            [form]="form"
+            [menuItem]="item"
+            [iccPopover]="menu"
+            [iccPopoverTrigger]="hoverTrigger"
+            [popoverLevel]="level()"
+            [clickToClose]="clickToClose()"
+            [iccPopoverPosition]="rightBottom"
+            (iccMenuItemClick)="menuItemClick($event)"
+          >
+          </icc-menu-item>
+        }
+        <ng-template #menu>
+          <icc-menus
+            [form]="form"
+            class="icc-menus-sub-level"
+            [items]="item.children!"
+            [values]="values"
+            [disabled]="disabled()"
+            [level]="level() + 1"
+            [clickToClose]="clickToClose()"
+            (iccMenuItemClick)="menuItemClick($event)"
+          >
+          </icc-menus>
+        </ng-template>
+      </div>
     }
-    <ng-template #menu>
-      <icc-menus
-        [form]="form"
-        class="icc-menus-sub-level"
-        [items]="item.children!"
-        [values]="values"
-        [disabled]="disabled()"
-        [level]="level() + 1"
-        [clickToClose]="clickToClose()"
-        (iccMenuItemClick)="menuItemClick($event)"
-      >
-      </icc-menus>
-    </ng-template>
-  </div>
-</form>
+  </form>
+}
