--- a/projects/icc/radio/src/radio.component.html
+++ b/projects/icc/radio/src/radio.component.html
@@ -2,10 +2,10 @@
   <input
     type="radio"
     class="cdk-visually-hidden"
-    [name]="name"
-    [value]="value"
-    [checked]="checked"
-    [formControl]="field"
+    [name]="name()"
+    [value]="value()"
+    [checked]="checked$()"
+    [formControl]="field()"
   />
   <span class="icc-radio-outer-circle"></span>
   <span class="icc-radio-inner-circle"></span>
