--- a/projects/icc/menu/src/cdk-menus.component.html
+++ b/projects/icc/menu/src/cdk-menus.component.html
@@ -1,50 +1,48 @@
 <!-- Use form due to the use checkbox in the menu item -->
-@if (form) {
-  <form cdkMenu [formGroup]="form">
-    @for (item of items; track $index; let index = $index) {
-      <div class="icc-menu-row">
-        @if (isLeafMenu(item)) {
-          <icc-menu-item
-            iccMenuItem
-            [keepOpen]="!!item.keepOpen"
-            [disabled]="getDisabled(item)"
-            [form]="form"
-            [menuItem]="item"
-            (iccMenuItemClick)="menuItemClick($event)"
-          >
-          </icc-menu-item>
-        } @else if (hasChildItem(item) && level() === 0) {
-          <span iccMenuItem [cdkMenuTriggerFor]="menu">
-            @if (item.icon) {
-              <icc-icon [config]="item.icon"></icc-icon>
-            }
-            <span class="icc-menu-item-title"> {{ item.title }}</span>
-          </span>
-        } @else if (hasChildItem(item) && level() > 0) {
-          <icc-menu-item
-            iccMenuItem
-            [keepOpen]="!!item.keepOpen"
-            [cdkMenuTriggerFor]="menu"
-            [disabled]="getDisabled(item)"
-            [form]="form"
-            [menuItem]="item"
-            (iccMenuItemClick)="menuItemClick($event)"
-          >
-          </icc-menu-item>
-        }
-        <ng-template #menu>
-          <cdk-menus
-            [form]="form"
-            class="icc-menus-sub-level"
-            [items]="item.children!"
-            [values]="values"
-            [disabled]="disabled()"
-            [level]="level() + 1"
-            (iccMenuItemClick)="menuItemClick($event)"
-          >
-          </cdk-menus>
-        </ng-template>
-      </div>
-    }
-  </form>
-}
+<form cdkMenu [formGroup]="form()">
+  @for (item of items$(); track $index; let index = $index) {
+    <div class="icc-menu-row">
+      @if (isLeafMenu(item)) {
+        <icc-menu-item
+          iccMenuItem
+          [keepOpen]="!!item.keepOpen"
+          [disabled]="getDisabled(item)"
+          [form]="form()"
+          [menuItem]="item"
+          (iccMenuItemClick)="menuItemClick($event)"
+        >
+        </icc-menu-item>
+      } @else if (hasChildItem(item) && level() === 0) {
+        <span iccMenuItem [cdkMenuTriggerFor]="menu">
+          @if (item.icon) {
+            <icc-icon [config]="item.icon"></icc-icon>
+          }
+          <span class="icc-menu-item-title"> {{ item.title }}</span>
+        </span>
+      } @else if (hasChildItem(item) && level() > 0) {
+        <icc-menu-item
+          iccMenuItem
+          [keepOpen]="!!item.keepOpen"
+          [cdkMenuTriggerFor]="menu"
+          [disabled]="getDisabled(item)"
+          [form]="form()"
+          [menuItem]="item"
+          (iccMenuItemClick)="menuItemClick($event)"
+        >
+        </icc-menu-item>
+      }
+      <ng-template #menu>
+        <cdk-menus
+          [form]="form()"
+          class="icc-menus-sub-level"
+          [items]="item.children!"
+          [values]="values$()"
+          [disabled]="disabled()"
+          [level]="level() + 1"
+          (iccMenuItemClick)="menuItemClick($event)"
+        >
+        </cdk-menus>
+      </ng-template>
+    </div>
+  }
+</form>
