--- a/projects/icc/d3/src/components/popover/popover.component.html
+++ b/projects/icc/d3/src/components/popover/popover.component.html
@@ -1,18 +1,24 @@
-<table *ngIf="data">
-  <thead *ngIf="data.value" style="text-align: left">
-    <th colspan="3">{{ data.value }}</th>
-  </thead>
-  <tbody *ngIf="data.series">
-    <ng-container *ngFor="let item of data.series">
-      <tr [ngClass]="item.hovered ? 'highlight' : ''">
-        <td [ngStyle]="{ 'border-bottom-color': item.color, 'border-top-color': item.color }">
-          <div class="legend-color-guide" [ngStyle]="{ 'background-color': item.color }"></div>
-        </td>
-        <td [ngStyle]="{ 'border-bottom-color': item.color, 'border-top-color': item.color }">{{ item.key }}</td>
-        <td [ngStyle]="{ 'border-bottom-color': item.color, 'border-top-color': item.color, 'text-align': 'right' }">
-          {{ item.value }}
-        </td>
-      </tr>
-    </ng-container>
-  </tbody>
-</table>
+@if (data) {
+  <table>
+    @if (data.value) {
+      <thead style="text-align: left">
+        <th colspan="3">{{ data.value }}</th>
+      </thead>
+    }
+    @if (data.series) {
+      <tbody>
+        @for (item of data.series; track $index; let index = $index) {
+          <tr [class.highlight]="item.hovered">
+            <td [style]="{ 'border-bottom-color': item.color, 'border-top-color': item.color }">
+              <div class="legend-color-guide" [style]="{ 'background-color': item.color }"></div>
+            </td>
+            <td [style]="{ 'border-bottom-color': item.color, 'border-top-color': item.color }">{{ item.key }}</td>
+            <td [style]="{ 'border-bottom-color': item.color, 'border-top-color': item.color, 'text-align': 'right' }">
+              {{ item.value }}
+            </td>
+          </tr>
+        }
+      </tbody>
+    }
+  </table>
+}
