--- a/projects/icc/d3/src/components/d3-view.component.html
+++ b/projects/icc/d3/src/components/d3-view.component.html
@@ -3,7 +3,7 @@
   *ngIf="legend && legend.enabled"
   [view]="view"
   [chartConfigs]="chartConfigs"
-  [data]="data"
+  [data]="data$()"
   [scale]="scale$ | async"
   [dispatch]="dispatch"
 >
