--- a/projects/icc/d3/src/components/d3-view.component.html
+++ b/projects/icc/d3/src/components/d3-view.component.html
@@ -2,7 +2,7 @@
 <icc-d3-legend
   *ngIf="legend && legend.enabled"
   [view]="view"
-  [chartConfigs]="chartConfigs"
+  [chartConfigs]="chartConfigs$()"
   [data]="data$()"
   [scale]="scale$ | async"
   [dispatch]="dispatch"
