--- a/projects/icc/d3/src/components/d3-view.component.html
+++ b/projects/icc/d3/src/components/d3-view.component.html
@@ -1,10 +1,12 @@
 <svg width="100%"></svg>
-<icc-d3-legend
-  *ngIf="legend && legend.enabled"
-  [view]="view"
-  [chartConfigs]="chartConfigs$()"
-  [data]="data$()"
-  [scale]="scale$ | async"
-  [dispatch]="dispatch"
->
-</icc-d3-legend>
+
+@if (legend && legend.enabled) {
+  <icc-d3-legend
+    [view]="view"
+    [chartConfigs]="chartConfigs$()"
+    [data]="data$()"
+    [scale]="scale$ | async"
+    [dispatch]="dispatch"
+  >
+  </icc-d3-legend>
+}
