--- a/projects/icc/d3/src/components/d3-view.component.html
+++ b/projects/icc/d3/src/components/d3-view.component.html
@@ -1,12 +1,6 @@
 <svg width="100%"></svg>
 
 @if (legend && legend.enabled) {
-  <icc-d3-legend
-    [view]="view"
-    [chartConfigs]="chartConfigs$()"
-    [data]="data$()"
-    [scale]="scale$ | async"
-    [dispatch]="dispatch"
-  >
+  <icc-d3-legend [view]="view" [chartConfigs]="chartConfigs$()" [data]="data$()" [scale]="scale" [dispatch]="dispatch">
   </icc-d3-legend>
 }
