form fields signal

--- a/projects/icc-demo/src/app/views/form/demos/simple-form.component.html
+++ b/projects/icc-demo/src/app/views/form/demos/simple-form.component.html
@@ -9,3 +9,23 @@
   <icc-form [formConfig]="remoteFormFieldsAndValues"></icc-form>
   <icc-form [formConfig]="allRemotes"></icc-form>
 </div>
+
+<!--
+<div>
+  <icc-form [formConfig]="formConfig" [formFields]="formFields" [values]="values"></icc-form>
+  <icc-form [formConfig]="formConfig" [formFields]="fieldSet1" [values]="values"></icc-form>
+  <icc-form [formFields]="fieldSet2" [values]="values"></icc-form>
+</div>
+
+<div>
+  <icc-form [formConfig]="remoteFormFields" [values]="values"></icc-form>
+  <icc-form [formConfig]="remoteFormFieldsAndValues"></icc-form>
+  <icc-form [formConfig]="allRemotes"></icc-form>
+</div>
+
+
+<div>
+  <icc-form [formConfig]="remoteFormFields" [values]="values"></icc-form>
+ 
+</div>
+-->
