--- a/projects/icc/d3/src/components/legend/legend.component.html
+++ b/projects/icc/d3/src/components/legend/legend.component.html
@@ -1,18 +1,20 @@
-@for (data of legendData; track $index; let i = $index) {
-  <div [style]="legendStyles()">
-    @for (item of data; track $index; let j = $index) {
-      <div
-        class="legend"
-        [style.width]="legendWidth(j)"
-        (click)="itemClick($event, item)"
-        (mouseover)="itemMouseOver($event, item)"
-        (mouseout)="itemMouseOut($event, item)"
-      >
-        <div class="legend-icon" [style]="iconStyles(item, j)"></div>
-        <span [style]="{ 'white-space': 'nowrap', color: legendColor(item, i), 'margin-right': '15px' }">
-          {{ legendText(item) }}
-        </span>
-      </div>
-    }
-  </div>
-}
+<div [style]="legendStyles()">
+  @for (data of legendData$(); track $index; let i = $index) {
+    <div>
+      @for (item of data; track $index; let j = $index) {
+        <div
+          class="legend"
+          [style.width]="legendWidth(j)"
+          (click)="itemClick($event, item)"
+          (mouseover)="itemMouseOver($event, item)"
+          (mouseout)="itemMouseOut($event, item)"
+        >
+          <div class="legend-icon" [style]="iconStyles(item, j)"></div>
+          <span [style]="{ 'white-space': 'nowrap', color: legendColor(item, i), 'margin-right': '15px' }">
+            {{ legendText(item) }}
+          </span>
+        </div>
+      }
+    </div>
+  }
+</div>
