--- a/projects/icc/fields/src/select-field/select-field.component.html
+++ b/projects/icc/fields/src/select-field/select-field.component.html
@@ -47,7 +47,7 @@
           [setSelected]="setSelected"
           [selectFilter]="field.value"
           [form]="form()"
-          [value]="value()"
+          [value]="value$()"
           [selectOptions]="selectOptions$()"
           (clickedOption)="onClickedOption($event)"
           (autocompleteClose)="onAutocompleteClose($event)"
