grid display info

--- a/projects/icc/grid/src/components/grid-footer/grid-footer.component.html
+++ b/projects/icc/grid/src/components/grid-footer/grid-footer.component.html
@@ -1,38 +1,40 @@
 <icc-layout-footer>
-  <button icc-button (click)="getGridPageData(1)" [disabled]="page === 1">
-    <icc-icon config="backward-step"></icc-icon>
-  </button>
+  @if (!gridConfig().virtualScroll) {
+    <button icc-button (click)="getGridPageData(1)" [disabled]="page === 1">
+      <icc-icon config="backward-step"></icc-icon>
+    </button>
 
-  <button icc-button (click)="getGridPageData(page - 1)" [disabled]="page === 1">
-    <icc-icon config="caret-left"></icc-icon>
-  </button>
+    <button icc-button (click)="getGridPageData(page - 1)" [disabled]="page === 1">
+      <icc-icon config="caret-left"></icc-icon>
+    </button>
 
-  @if (fieldConfig$()) {
-    <icc-number-field
-      [fieldConfig]="fieldConfig$()!"
-      [value]="page"
-      [showFieldEditIndicator]="false"
-      (valueChange)="onValueChange($event)"
-    >
-    </icc-number-field>
+    @if (fieldConfig$()) {
+      <icc-number-field
+        [fieldConfig]="fieldConfig$()!"
+        [value]="page"
+        [showFieldEditIndicator]="false"
+        (valueChange)="onValueChange($event)"
+      >
+      </icc-number-field>
+    }
+    <span> {{ "ICC.UI.GRID.OF" | translate }} {{ lastPage() }} </span>
+    <button icc-button (click)="getGridPageData(page + 1)" [disabled]="page === lastPage()">
+      <icc-icon config="caret-right"></icc-icon>
+    </button>
+
+    <button icc-button (click)="getGridPageData(lastPage())" [disabled]="page === lastPage()">
+      <icc-icon config="forward-step"></icc-icon>
+    </button>
+
+    <button icc-button (click)="refreshData(page)">
+      <icc-icon config="arrows-rotate"></icc-icon>
+    </button>
+
+    <span>
+      {{ "ICC.UI.GRID.PAGE_SIZE" | translate }}:
+      <input iccInput type="number" min="1" max="10" [value]="gridConfig().pageSize" autocomplete="off" readonly />
+    </span>
   }
-  <span> {{ "ICC.UI.GRID.OF" | translate }} {{ lastPage() }} </span>
-  <button icc-button (click)="getGridPageData(page + 1)" [disabled]="page === lastPage()">
-    <icc-icon config="caret-right"></icc-icon>
-  </button>
-
-  <button icc-button (click)="getGridPageData(lastPage())" [disabled]="page === lastPage()">
-    <icc-icon config="forward-step"></icc-icon>
-  </button>
-
-  <button icc-button (click)="refreshData(page)">
-    <icc-icon config="arrows-rotate"></icc-icon>
-  </button>
-
-  <span>
-    {{ "ICC.UI.GRID.PAGE_SIZE" | translate }}:
-    <input iccInput type="number" min="1" max="10" [value]="gridConfig().pageSize" autocomplete="off" readonly />
-  </span>
 
   <icc-layout-footer-end>
     {{ "ICC.UI.GRID.DISPLAYING" | translate }}
